--- a/components/web_server/static/style.css
+++ b/components/web_server/static/style.css
@@ -17,16 +17,18 @@ body {
 .container {
     width: 100%;
     max-width: 500px;
-    padding: 30px;
+    padding: 12px;
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.1);
 }
 
 .page-title {
-    font-size: 24px;
+    font-size: 18px;
     text-align: center;
-    margin-bottom: 30px;
     color: #2196F3;
     font-weight: 600;
+    position: absolute;
 } 
+
+
