--- a/components/web_server/static/index.html
+++ b/components/web_server/static/index.html
@@ -11,6 +11,9 @@
     <div class="container">
         <div id="oscillatorControl1" class="oscillator-control"></div>
         <div id="oscillatorContro12" class="oscillator-control"></div>
+        <div id="oscillatorContro13" class="oscillator-control"></div>
+        <div id="oscillatorContro14" class="oscillator-control"></div>
+        <div id="oscillator-diagram"></div>
     </div>
     <script src="scripts.js"></script>
     <script src="value-control.js"></script>
@@ -28,7 +31,7 @@
         //     valueControl.mount('#valueControl');
         // });
 
-        const oscillatorControl1 = new OscillatorControl('oscillatorControl1', 'OSC1', {
+        const oscillatorControl1 = new OscillatorControl('oscillatorControl1', 'OSC 1-4', {
             onChange: (frequency) => {
                 updateOscillator(frequency);
             }
@@ -39,6 +42,38 @@
                 updateOscillator(frequency);
             }
         });
+
+        const oscillatorControl3 = new OscillatorControl('oscillatorContro13', 'OSC3', {
+            onChange: (frequency) => {
+                updateOscillator(frequency);
+            }
+        });
+
+        const oscillatorControl4 = new OscillatorControl('oscillatorContro14', 'OSC4', {
+            onChange: (frequency) => {
+                updateOscillator(frequency);
+            }
+        });
+        
+        
+
+        const diagram = new OscillatorDiagram('oscillator-diagram');
+
+        // Очистить все соединения
+        diagram.clearConnections();
+
+        // Активировать соединение между осцилляторами 1 и 2
+        diagram.setConnection('osc-1', 'osc-2', true);
+
+        diagram.setConnection('osc-2', 'osc-3', true);
+
+        diagram.setConnection('osc-3', 'osc-4', true);
+
+        // Получить список активных соединений
+        const activeConnections = diagram.getActiveConnections();
+
+        // todo добавить возможность активировать/деактивировать один из осцилляторов
+        // todo добавить возможность убрать заголовки у компонентов
     </script>
 </body>
 </html> 
