--- a/components/web_server/static/value-control.css
+++ b/components/web_server/static/value-control.css
@@ -22,7 +22,7 @@
 .value-control .control-container {
     background-color: #f0f0f0;
     border-radius: 4px;
-    padding: 10px;
+    padding: 14px;
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -67,6 +67,7 @@
     flex-direction: row;
     gap: 10px;
     position: relative;
+    margin-bottom: 8px;
 }
 
 .oscillator-control .title {
@@ -82,3 +83,27 @@
     flex: 1;
 }
 
+/* LogicBlockControl styles */
+.logic-block-control {
+}
+
+.logic-block-btn {
+    background: #f0f0f0;
+    color: #555;
+    border: 0;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 18px 0;
+    cursor: pointer;
+    transition: all 0.2s;
+    user-select: none;
+}
+.logic-block-btn.active {
+    background: #4CAF50;
+    color: #fff;
+    /* border-color: #388e3c;
+    box-shadow: 0 2px 10px rgba(76,175,80,0.15); */
+}
+.logic-block-btn:active {
+    filter: brightness(0.95);
+}
