рефач кода, доработка интерфейса

--- a/components/web_server/static/index.html
+++ b/components/web_server/static/index.html
@@ -12,9 +12,9 @@
     <!-- oscilator controls -->
     <div class="container">
         <div id="oscillatorControl1" class="oscillator-control"></div>
-        <div id="oscillatorContro12" class="oscillator-control"></div>
-        <div id="oscillatorContro13" class="oscillator-control"></div>
-        <div id="oscillatorContro14" class="oscillator-control"></div>
+        <div id="oscillatorControl2" class="oscillator-control"></div>
+        <div id="oscillatorControl3" class="oscillator-control"></div>
+        <div id="oscillatorControl4" class="oscillator-control"></div>
     </div>
     
     <!-- logic blocks 1-2 -->
