--- a/components/web_server/static/index.html
+++ b/components/web_server/static/index.html
@@ -94,6 +94,8 @@
         </div>
     </div>
 
+    <!-- <script src="audio-worklet.js"></script>
+    <script src="audio-stream.js"></script> -->
     <script src="value-control.js"></script>
 
     <script src="scripts.js"></script>
