web: added alg reverb;

--- a/components/web_server/static/index.html
+++ b/components/web_server/static/index.html
@@ -94,8 +94,9 @@
         </div>
     </div>
 
-    <!-- <script src="audio-worklet.js"></script>
-    <script src="audio-stream.js"></script> -->
+    <script src="audio-effects.js"></script>
+    <script src="audio-worklet.js"></script>
+
     <script src="value-control.js"></script>
 
     <script src="scripts.js"></script>
