--- a/components/web_server/static/lunette/src/controls/logic-block/logic-block.css
+++ b/components/web_server/static/lunette/src/controls/logic-block/logic-block.css
@@ -1,17 +1,12 @@
 .logic-block {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    padding: 16px;
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 2px 0;
 }
 
-.logic-block-section {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
+.title {
+    color: #444;
+    font-size: 12px;
 }
 
 .logic-block-section h3 {
@@ -19,4 +14,24 @@
     font-weight: 600;
     color: #333;
     margin: 0;
+}
+
+.connection-block {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 4px;
+}
+
+.arrow-down-container {
+    color: #333;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 18px;
+    margin-top: -4px;
+    font-size: 12px;
+}
+
+.arrow-down-container .arrow-down {
+    flex: 1;
 }
