--- a/components/web_server/static/lunette/src/controls/round-slider-control/round-slider-control.css
+++ b/components/web_server/static/lunette/src/controls/round-slider-control/round-slider-control.css
@@ -56,13 +56,12 @@
   background: #007bff;
   border: none;
 }
-
 .slider-button {
-  padding: 10px 20px;
+  padding: 14px;
   border: none;
   border-radius: 4px;
-  background: #007bff;
-  color: white;
+  background-color: #eee;
+  color: #444;
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
