added screens and swipe function; refactored from app to screens; added effects screen and reverb control; fixed and updated value control;

--- a/components/web_server/static/lunette/src/controls/round-slider-control/round-slider-control.css
+++ b/components/web_server/static/lunette/src/controls/round-slider-control/round-slider-control.css
@@ -94,3 +94,14 @@
 .slider-button.over-handle:hover {
   background: #218838;
 }
+
+.slider-button.disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+    pointer-events: none;
+}
+
+.overlay.disabled {
+    opacity: 0.6;
+    pointer-events: none;
+}
