--- a/components/web_server/static/lunette/src/controls/swipe-screens-control/swipe-screens-control.css
+++ b/components/web_server/static/lunette/src/controls/swipe-screens-control/swipe-screens-control.css
@@ -1,20 +1,28 @@
 .swipe-screens-container {
-  width: 100%;
-  min-height: 100vh;
-  overflow: hidden;
   position: relative;
+  width: 100%;
+  height: 100%;
+  /* overflow: hidden; */
+  /* overflow-x: hidden; */
+  /* min-height: 100vh;
+  overflow: hidden;
+  position: relative; */
 }
 
 .swipe-screens-wrapper {
-  position: absolute;
-  display: flex;
+  /* position: absolute; */
+  /* display: flex; */
   width: 100%;
-  height: 100%;
-  transition: left 0.3s ease-out;
+  /* height: 100%; */
+  /* transition: left 0.3s ease-out; */
 }
 
 .swipe-screen {
-  flex: 0 0 100%;
+  /* position: absolute;
+  top: 0;
+  left: 0; */
   width: 100%;
   height: 100%;
+  will-change: opacity;
+  /* flex: 0 0 100%; */
 }
