--- a/components/web_server/static/lunette/src/controls/value-control/value-control.css
+++ b/components/web_server/static/lunette/src/controls/value-control/value-control.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 8px;
-    padding: 8px;
+    gap: 4px;
     user-select: none;
 }
 
@@ -129,6 +128,7 @@
     font-size: 14px;
     color: #333;
     margin-left: 4px;
+    padding-top: 6px;
 }
 
 .value-control .control-container {
