--- a/components/web_server/static/lunette/src/index.css
+++ b/components/web_server/static/lunette/src/index.css
@@ -27,6 +27,7 @@ body {
   margin: 0;
   background-color: #eee;
   min-height: 100vh;
+  overscroll-behavior-y: contain; /* fix refresh on scroll */
 }
 
 h1 {
