--- a/components/web_server/static/lunette/src/index.css
+++ b/components/web_server/static/lunette/src/index.css
@@ -61,6 +61,22 @@ button {
   padding: 6px;
 }
 
+@keyframes blink {
+  0% {
+      opacity: 1;
+  }
+  50% {
+      opacity: 0.5;
+  }
+  100% {
+      opacity: 1;
+  }
+}
+
+.loading-block {
+  animation: blink 1.5s ease-in-out infinite;
+}
+
 /* button {
   border-radius: 8px;
   border: 1px solid transparent;
