oscillator apihook refactored to provider; added pianokeyboard component; added keyboard screen; added global styles;

--- a/components/web_server/static/lunette/src/controls/select-control/select-control.css
+++ b/components/web_server/static/lunette/src/controls/select-control/select-control.css
@@ -21,7 +21,7 @@
 }
 
 .logic-block-btn.active {
-    background: #4CAF50;
+    background: var(--primary-color);
     color: #fff;
     /* border-color: #388e3c;
     box-shadow: 0 2px 10px rgba(76,175,80,0.15); */
