--- a/components/web_server/static/lunette/src/controls/select-control/select-control.css
+++ b/components/web_server/static/lunette/src/controls/select-control/select-control.css
@@ -30,3 +30,15 @@
     filter: brightness(0.95);
 }
 
+.select-control-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.select-control-label {
+    color: #333;
+    font-weight: 500;
+    margin-bottom: 2px;
+}
+
